--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ h1, h2, h3, h4, h5 {font-family:Lato, Arial, Helvetica, Sans-serif}
 h1{padding-top:0px;font-size:20px;font-weight:700;}	/* headers */
 h2{padding-bottom:10px;font-size:16px;font-weight:400;background-color:;line-height:200%;} /* sub-headers */
 h3{padding-bottom:0px;font-size:16px;font-weight:400;background-color:;line-height:200%;color:#A9A9A9;} /* sub-headers */
-h4{font-size:15px;font-weight:400;background-color:;line-height: 200%;}
+h4{font-size:15px;font-weight:400;background-color:;line-height: 150%;}
 /* h5{font-size:24px;font-weight:400;background-color:;line-height: 150%;} */
 
 h5{font-family: Cousine, Lato, Arial, Helvetica, Sans-serif}
@@ -278,7 +278,7 @@ img {
 .tbl {
   padding-top: 30px;
   padding-bottom: 0px;
-  
+   overflow-x: scroll;
 }
 
 .macroinnersql {
@@ -300,6 +300,31 @@ img {
 
 a:link {
   text-decoration: none;
+}
+
+
+#backToTop {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 10px; /* Place the button at the bottom of the page */
+  left: 50%; /* Place the button 30px from the right */
+  transform: translate(-50%, -50%);
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #38408d; /* For browsers that do not support gradients */
+  background-image: linear-gradient(to bottom left, #38408d, #af50c0); /* Standard syntax (must be last) */
+  color: #ffffff; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 9px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 14px; /* Increase font size */
+  font-family:Lato;
+  font-weight:300;
+}
+
+#myBtn:hover {
+	background-color: #38408d; /* Like hamburger */
 }
 
 
