--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,20 @@ a:link {
 }
 
 
+.resp-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 86%;
+}
+
+.resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
 
 /*
 @media (min-width:1400px) {
